# claw402-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
claw402/: __init__.py  client.py  errors.py
docs/: ARCHITECTURE.md
examples/: basic.py
