[project]
name = "claw402"
version = "0.1.0"
description = "Typed SDK for claw402.ai — pay-per-call crypto data APIs via x402"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "eth-account>=0.11.0",
]

[project.urls]
Homepage = "https://claw402.ai"
Repository = "https://github.com/NoFxAiOS/claw402-python"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
